@@ -2,15 +2,16 @@ package br.unitins.service.perspectiveService;
 
 import java.io.*;
 import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URL;
-
 import jakarta.json.*;
 
 public class PerspectiveService {
-    private static final String API_KEY = "AIzaSyD-bC9FK5G7fEZbOzA7Mc9v7FN2wP1dHEM"; 
+    private static final String API_KEY = "AIzaSyD-bC9FK5G7fEZbOzA7Mc9v7FN2wP1dHEM"; // Substitua pela sua chave
 
     public static double analisarTexto(String comentario) throws Exception {
-        URL url = new URL("https://commentanalyzer.googleapis.com/v1alpha1/comments:analyze?key=" + API_KEY);
+        URI uri = new URI("https://commentanalyzer.googleapis.com/v1alpha1/comments:analyze?key=" + API_KEY);
+        URL url = uri.toURL();
         HttpURLConnection con = (HttpURLConnection) url.openConnection();
         con.setRequestMethod("POST");
         con.setRequestProperty("Content-Type", "application/json");
@@ -28,11 +29,20 @@ public class PerspectiveService {
 
         try (InputStream is = con.getInputStream();
              JsonReader reader = Json.createReader(is)) {
+
             JsonObject response = reader.readObject();
-            return response.getJsonObject("attributeScores")
-                           .getJsonObject("TOXICITY")
-                           .getJsonNumber("summaryScore")
-                           .doubleValue();
+
+            // Verificação segura para evitar ClassCastException
+            JsonObject toxicityScore = response.getJsonObject("attributeScores").getJsonObject("TOXICITY");
+            if (toxicityScore.containsKey("summaryScore") && toxicityScore.get("summaryScore") instanceof JsonNumber) {
+                return toxicityScore.getJsonNumber("summaryScore").doubleValue();
+            } else {
+                return -1.0; // Retorna -1 caso a API não retorne um score válido
+            }
+        } catch (Exception e) {
+            e.printStackTrace();
+            return -1.0; // Retorna -1 em caso de erro na requisição
         }
     }
 }
+
